Update to the latest Spring and Java.
    - Update to the latest Spring Boot 2.7.0-M2.
    - Update to the latest JDK 18.
    - Update to the latest dependencies and could be found in pom.xml.
    - FIX Airport DST enumeration value to be inserted as String not ordinal.
    - FIX database script tables datatype according to latest H2 database.
    - Rename database table user to users as it reported as invalid identifier.
    - Implements all sonarlint warnings.
    - Update the code to the latest JDK 18 features and APIs.
    - Update README.md file.
    - FIX some JavaDoc issues.